[package]
name = "omagari"
version = "0.16.1"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = "1.0.219"
ron = "0.8"
bevy = { version = "0.16.1" }
bevy_hanabi = { version = "0.16", features = ["3d", "serde"] }
bevy_egui = { version = "0.36.0", optional = true }
bevy_panorbit_camera = { version = "0.27.0", optional = true }
regex = { version = "1.11.1", optional = true }

[features]
editor = ["bevy_egui", "bevy_panorbit_camera", "regex"]

[[bin]]
name = "omagari"
path = "src/main.rs"
required-features = ["editor"]

[lib]
name = "omagari"
path = "src/lib.rs"
