[package]
name = "omagari"
version = "0.16.1"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = "1.0.228"
ron = "0.10"
bevy = { version = "0.17" }
bevy_hanabi = { version = "0.17", features = ["3d", "serde"] }
bevy_egui = { version = "0.38", optional = true }
bevy_panorbit_camera = { version = "0.33", optional = true }
regex = { version = "1.11.1", optional = true }

[features]
editor = ["bevy_egui", "bevy_panorbit_camera", "regex"]

[[bin]]
name = "omagari"
path = "src/main.rs"
required-features = ["editor"]

[lib]
name = "omagari"
path = "src/lib.rs"
